sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: value >- is not a member of Int
    while (valeur< getValeur(n) && n>-1){
                                    ^